syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dubass83/simplebank/pb";

message Account {
	int64 id = 1;       
	string owner = 2;   
	int64  balance = 3; 
	string carrency = 4;
	google.protobuf.Timestamp created_at = 5;
}